--- a/ManageCenter/ui/PrintBillW.xaml
+++ b/ManageCenter/ui/PrintBillW.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d" ResizeMode="NoResize"
         Icon="/ManageCenter;component/aislogo_48.ico"
         WindowStartupLocation="CenterScreen" WindowStyle="None"  
-        Title="磅单打印" Height="480" Width="800"
+        Title="磅单详情" Height="480" Width="800"
         Loaded="Window_Loaded" KeyUp="Window_KeyUp"
         ContentRendered="Window_ContentRendered" 
         Closing="Window_Closing" >
@@ -37,8 +37,8 @@
         </Grid.RowDefinitions>
         <Border Grid.Row="0"  x:Name="headerBorder" MouseMove="headerBorder_MouseMove"  Background="{DynamicResource E4}">
             <StackPanel Orientation="Horizontal" Background="Transparent" MouseMove="headerBorder_MouseMove">
-                <Image Source="/ManageCenter;component/aislogo_48.ico" Width="48" Height="48" HorizontalAlignment="Left" Margin="10"></Image>
-                <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Text="磅单打印" VerticalAlignment="Center" FontSize="20" FontWeight="Black" Foreground="#787972"></TextBlock>
+                <Image Source="/ManageCenter;component/aislogo_48.ico" Width="48" Height="48" HorizontalAlignment="Left" Margin="10"/>
+                <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Text="磅单详情" VerticalAlignment="Center" FontSize="20" FontWeight="Black" Foreground="#787972"></TextBlock>
             </StackPanel>
         </Border>
         <!--关闭按钮-->
@@ -173,11 +173,11 @@
                                 <TextBlock Text="驾驶员签字: " DockPanel.Dock="Right" FontSize="14" Foreground="#787879" Margin="0,3,20,0" Width="160"/>
                                 <WrapPanel DockPanel.Dock="Right" Margin="0,3,0,0">
                                     <TextBlock Text="过磅员: "   FontSize="14" Foreground="#787879" />
-                                    <TextBlock Text="{Binding receiveUserName}"   FontSize="12" Foreground="#787879"  Width="130"/>
+                                    <TextBlock Text="{Binding addUserName}"   FontSize="12" Foreground="#787879"  Width="130" Padding="0,2,0,0"/>
                                 </WrapPanel>
                                 <WrapPanel>
-                                    <TextBlock Text="审核员：" FontSize="14" Foreground="#787879" Margin="10,3,10,0" Width="50"/>
-                                    <TextBlock Text="{Binding checkUserName}" Style="{StaticResource ValueStyle}" Margin="3,3,0,0"/>
+                                    <TextBlock Text="审核员：" FontSize="14" Foreground="#787879" Margin="10,3,1,0" Width="50"/>
+                                    <TextBlock Text="{Binding checkUserName}"   FontSize="12"  Style="{StaticResource ValueStyle}" Padding="1,4,0,0"/>
                                 </WrapPanel>
                             </DockPanel>
                         </Border>
@@ -188,13 +188,13 @@
 
         <Border Grid.Row="2" Background="White"  BorderThickness="1,0,1,1" BorderBrush="{StaticResource E4}">
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                <myui:IconButton x:Name="PrintBtn" Content="打印" Click="PrintBtn_Click"
+                <myui:IconButton x:Name="LookPicBtn" Content="查看视频截图" Click="LookPicBtn_Click"
                           CornerRadius="4" Cursor="Hand"
                            Background="{StaticResource E4}"
                            MouseOverForeground="{DynamicResource myBlue}"
                            VerticalAlignment="Bottom" 
-                           IsShowIcon="True" Icon="&#xe65b;" IconSize="22"
-                           Width="80" Height="30" IconMargin="2,0,4,0"
+                           IsShowIcon="True" Icon="&#xe877;" IconSize="22"
+                           Width="120" Height="30" IconMargin="2,0,4,0"
                          />
             </StackPanel>
         </Border>
