--- a/ManageCenter/ui/ReportWindow.xaml
+++ b/ManageCenter/ui/ReportWindow.xaml
@@ -149,7 +149,7 @@
                             <StackPanel Grid.Row="0">
                                 <StackPanel HorizontalAlignment="Center" >
                                     <TextBlock x:Name="PrintTitleTb" Text="云南省曲靖市富源县煤炭管理运煤放行单" FontSize="16"  FontWeight="Bold"/>
-                                    <TextBlock x:Name="StationNametb" Text="(雨汪验票站-验票报表)" FontSize="14" Padding="1,6,1,4" HorizontalAlignment="Center" FontWeight="ExtraBold"/>
+                                    <TextBlock x:Name="StationNametb" Text="(验票报表)" FontSize="14" Padding="1,6,1,4" HorizontalAlignment="Center" FontWeight="ExtraBold"/>
                                 </StackPanel>
                                 <WrapPanel>
                                     <TextBlock Text="时间："/>
