--- a/ManageCenter/ui/MaterailAddWindow.xaml
+++ b/ManageCenter/ui/MaterailAddWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ManageCenter.UserAddWindow"
+﻿<Window x:Class="ManageCenter.MaterailAddWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,7 +8,7 @@
         mc:Ignorable="d" ResizeMode="NoResize"
         Icon="/ManageCenter;component/aislogo_48.ico"
         WindowStartupLocation="CenterScreen" WindowStyle="None"  
-        Title="添加用户" Height="380" Width="600"
+        Title="添加煤种" Height="320" Width="600"
         Loaded="Window_Loaded" KeyUp="Window_KeyUp"
         ContentRendered="Window_ContentRendered" 
         Closing="Window_Closing">
@@ -21,7 +21,7 @@
         <Border Grid.Row="0"  x:Name="headerBorder" MouseMove="headerBorder_MouseMove"  Background="{DynamicResource E4}">
             <StackPanel Orientation="Horizontal" Background="Transparent" MouseMove="headerBorder_MouseMove">
                 <Image Source="/ManageCenter;component/aislogo_48.ico" Width="48" Height="48" HorizontalAlignment="Left" Margin="10"/>
-                <TextBlock x:Name="BodyTitle" HorizontalAlignment="Left" Margin="0,0,0,0" Text="添加用户" VerticalAlignment="Center" FontSize="20" FontWeight="Black" Foreground="#787972"></TextBlock>
+                <TextBlock x:Name="BodyTitle" HorizontalAlignment="Left" Margin="0,0,0,0" Text="添加煤种" VerticalAlignment="Center" FontSize="20" FontWeight="Black" Foreground="#787972"></TextBlock>
             </StackPanel>
         </Border>
         <!--关闭按钮-->
@@ -41,32 +41,14 @@
             <StackPanel VerticalAlignment="Center" >
                 <StackPanel VerticalAlignment="Center">
                     <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10">
-                        <TextBlock Text="手机号码：" Padding="3" FontSize="14"/>
-                        <TextBox x:Name="mobileTb" Width="150" Height="25" Padding="3"  FontSize="14" InputScope="Number"/>
+                        <TextBlock Text="煤种名称：" Padding="3" FontSize="14"/>
+                        <TextBox x:Name="nameTb" Width="180" Height="25" Padding="3"  FontSize="14"/>
                     </WrapPanel>
-                    <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10">
-                        <TextBlock Text="真实姓名：" Padding="3" FontSize="14"/>
-                        <TextBox x:Name="nameTb" Width="150" Height="25" Padding="3"  FontSize="14" InputScope="Number"/>
-                    </WrapPanel>
-                    <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10">
-                        <TextBlock Text="角色权限：" Padding="3" FontSize="14"/>
-                        <ComboBox x:Name="RolesCb" Width="150" Height="25" Padding="3"  FontSize="14" DisplayMemberPath="name" IsEditable="False"/>
-                    </WrapPanel>
-                    <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10">
-                        <TextBlock Text="所属站占：" Padding="3" FontSize="14"/>
-                        <ComboBox x:Name="StationCb" Width="150" Height="25" Padding="3"  FontSize="14" DisplayMemberPath="name" IsEditable="False"/>
-                    </WrapPanel>
-                    <WrapPanel HorizontalAlignment="Center" Margin="0,5,0,10">
-                        <TextBlock Text="登陆密码：" Padding="3" FontSize="14"/>
-                        <PasswordBox  x:Name="pwdPb" Width="150" Height="25" Padding="3" FontSize="14"/>
-                    </WrapPanel>
-                    <WrapPanel HorizontalAlignment="Center" Margin="0,5,0,10">
-                        <TextBlock Text="用户性别：" Padding="3" FontSize="14"/>
-                        <ComboBox  x:Name="sexcb" Width="150" Height="25" Padding="3" FontSize="14" IsEditable="False">
-                            <ComboBoxItem>女</ComboBoxItem>
-                            <ComboBoxItem IsSelected="True">男</ComboBoxItem>
-                        </ComboBox>
-                    </WrapPanel>
+                    <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10"/>
+                    <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10"/>
+                    <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10"/>
+                    <WrapPanel HorizontalAlignment="Center" Margin="0,5,0,10"/>
+                    <WrapPanel HorizontalAlignment="Center" Margin="0,5,0,10"/>
                 </StackPanel>
             </StackPanel>
         </Border>
