--- a/ManageCenter/ui/MaterialPriceWindow.xaml
+++ b/ManageCenter/ui/MaterialPriceWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ManageCenter.MaterailAddWindow"
+﻿<Window x:Class="ManageCenter.MaterialPriceWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,8 +9,7 @@
         Icon="/ManageCenter;component/aislogo_48.ico"
         WindowStartupLocation="CenterScreen" WindowStyle="None"  
         Title="添加煤种" Height="320" Width="600"
-        Loaded="Window_Loaded" KeyUp="Window_KeyUp"
-        ContentRendered="Window_ContentRendered" 
+        Loaded="Window_Loaded" KeyUp="Window_KeyUp"       
         Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
@@ -21,7 +20,10 @@
         <Border Grid.Row="0"  x:Name="headerBorder" MouseMove="headerBorder_MouseMove"  Background="{DynamicResource E4}">
             <StackPanel Orientation="Horizontal" Background="Transparent" MouseMove="headerBorder_MouseMove">
                 <Image Source="/ManageCenter;component/aislogo_48.ico" Width="48" Height="48" HorizontalAlignment="Left" Margin="10"/>
-                <TextBlock x:Name="BodyTitle" HorizontalAlignment="Left" Margin="0,0,0,0" Text="添加煤种" VerticalAlignment="Center" FontSize="20" FontWeight="Black" Foreground="#787972"></TextBlock>
+                <StackPanel>
+                    <TextBlock x:Name="BodyTitle" HorizontalAlignment="Left" Margin="0,10,0,0" Text="添加煤种" VerticalAlignment="Center" FontSize="20" FontWeight="Black" Foreground="#787972"></TextBlock>
+                    <TextBlock x:Name="priceTB" HorizontalAlignment="Left" Margin="0,4,0,0" Text="当前价格 32.10" VerticalAlignment="Center" FontSize="14" FontWeight="Black" Foreground="Red"/>
+                </StackPanel>
             </StackPanel>
         </Border>
         <!--关闭按钮-->
@@ -41,12 +43,12 @@
             <StackPanel VerticalAlignment="Center" >
                 <StackPanel VerticalAlignment="Center">
                     <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10">
-                        <TextBlock Text="煤种名称：" Padding="3" FontSize="14"/>
-                        <TextBox x:Name="nameTb" Width="180" Height="25" Padding="3"  FontSize="14"/>
+                        <TextBlock Text="目标价格：" Padding="3" FontSize="14"/>
+                        <TextBox x:Name="targeetPriceTb" Width="200" Height="25" Padding="3"  FontSize="14" InputScope="Number"/>
                     </WrapPanel>
                     <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10">
-                        <TextBlock Text="合理磅差：" Padding="3" FontSize="14" />
-                        <TextBox x:Name="LimitTb" Width="180" Height="25" Padding="3"  FontSize="14" InputScope="Number"/>
+                        <TextBlock Text="调价说明：" Padding="3" FontSize="14"/>
+                        <TextBox x:Name="reamrkTb" Width="200" Height="25" Padding="3"  FontSize="14" />
                     </WrapPanel>
                 </StackPanel>
             </StackPanel>
