--- a/ManageCenter/ui/PrintBillW.xaml
+++ b/ManageCenter/ui/PrintBillW.xaml
@@ -187,13 +187,22 @@
         </Border>
 
         <Border Grid.Row="2" Background="White"  BorderThickness="1,0,1,1" BorderBrush="{StaticResource E4}">
-            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
                 <myui:IconButton x:Name="LookPicBtn" Content="查看视频截图" Click="LookPicBtn_Click"
                           CornerRadius="4" Cursor="Hand"
                            Background="{StaticResource E4}"
                            MouseOverForeground="{DynamicResource myBlue}"
                            VerticalAlignment="Bottom" 
                            IsShowIcon="True" Icon="&#xe877;" IconSize="22"
+                           Width="120" Height="30" IconMargin="2,0,4,0"
+                         />
+
+                <myui:IconButton x:Name="SetNomalBtn" Content="置为正常" Click="SetNomalBtn_Click" Visibility="Collapsed"
+                          CornerRadius="4" Cursor="Hand" Margin="10,0,0,0"
+                           Background="{StaticResource E4}"
+                           MouseOverForeground="{DynamicResource myBlue}"
+                           VerticalAlignment="Bottom" 
+                           IsShowIcon="True" Icon="&#xe8a6;" IconSize="22"
                            Width="120" Height="30" IconMargin="2,0,4,0"
                          />
             </StackPanel>
