--- a/ManageCenter/ui/MainWindow.xaml
+++ b/ManageCenter/ui/MainWindow.xaml
@@ -154,6 +154,9 @@
                     <MenuItem Header="基本设置" Icon="&#xe650;" x:Name="BaseSettingMI"  Click="MenuItem_Click"/>
                     <MenuItem Header="高级设置" Icon="&#xe688;" x:Name="HeithtSettintMI"  Click="MenuItem_Click"/>
                     <MenuItem Header="系统设置" Icon="&#xe668;" x:Name="SystemSettintMI"  Click="MenuItem_Click"/>
+                    <MenuItem Header="用户设置" Icon="&#xe61e;">
+                        <MenuItem Header="修改密码"  x:Name="passwordMI"  Click="MenuItem_Click" Icon="&#xe8c4;"/>
+                    </MenuItem>
                 </MenuItem>
                 <MenuItem Header="管理" >                  
                     <MenuItem Header="用户管理" Icon="&#xf031c;" x:Name="UserManagerMI"   Click="MenuItem_Click"/>
@@ -165,6 +168,9 @@
                     <MenuItem  Header="车辆管理" Icon="&#xe882;">
                         <MenuItem Header="车辆信息列表" x:Name="CarManageMI"   Click="MenuItem_Click"></MenuItem>
                     </MenuItem>
+                </MenuItem>
+                <MenuItem Header="站点管理 ">
+                    <MenuItem Header="站点列表" Icon="" x:Name="StationanagerMI" Click="MenuItem_Click"/>
                 </MenuItem>
                 <MenuItem Header="数据报表" >
                     <MenuItem Header="磅单列表" Icon="&#xe6df;"  x:Name="BillReporetMI"  Click="MenuItem_Click"/>
