--- a/ManageCenter/ui/PasswordWindow.xaml
+++ b/ManageCenter/ui/PasswordWindow.xaml
@@ -1,17 +1,16 @@
-﻿<Window x:Class="ManageCenter.SetStationWindow"
+﻿<Window x:Class="ManageCenter.PasswordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"     
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ManageCenter"
+        xmlns:local="clr-namespace:TicketCheckStation"
         xmlns:myui="clr-namespace:MyCustomControlLibrary;assembly=MyCustomControlLibrary"
         mc:Ignorable="d" ResizeMode="NoResize"
         Icon="/ManageCenter;component/aislogo_48.ico"
         WindowStartupLocation="CenterScreen" WindowStyle="None"  
-        Title="设置当前站点" Height="300" Width="530" ContentRendered="Window_ContentRendered"
-        Loaded="Window_Loaded" KeyUp="Window_KeyUp"      
-        Closing="Window_Closing" >
-   
+        Title="修改密码" Height="320" Width="600"
+        KeyUp="Window_KeyUp"    
+        Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="65"/>
@@ -20,8 +19,8 @@
         </Grid.RowDefinitions>
         <Border Grid.Row="0"  x:Name="headerBorder" MouseMove="headerBorder_MouseMove"  Background="{DynamicResource E4}">
             <StackPanel Orientation="Horizontal" Background="Transparent" MouseMove="headerBorder_MouseMove">
-                <Image Source="/ManageCenter;component/aislogo_48.ico" Width="48" Height="48" HorizontalAlignment="Left" Margin="10"></Image>
-                <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Text="设置当前站点" VerticalAlignment="Center" FontSize="20" FontWeight="Black" Foreground="#787972"></TextBlock>
+                <Image Source="/ManageCenter;component/aislogo_48.ico" Width="48" Height="48" HorizontalAlignment="Left" Margin="10"/>
+                <TextBlock x:Name="BodyTitle" HorizontalAlignment="Left" Margin="0,0,0,0" Text="修改密码" VerticalAlignment="Center" FontSize="20" FontWeight="Black" Foreground="#787972"></TextBlock>
             </StackPanel>
         </Border>
         <!--关闭按钮-->
@@ -38,12 +37,16 @@
         </myui:ImageButton>
 
         <Border  Background="White" Grid.Row="1" BorderThickness="1,0,1,0" BorderBrush="{StaticResource E4}">
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <StackPanel HorizontalAlignment="Right">
-                    <TextBlock  TextAlignment="Center" Height="25" VerticalAlignment="Center" FontSize="14" Margin="2" HorizontalAlignment="Right" Padding="4,3,0,0">选择站点：</TextBlock>        
-                </StackPanel>
-                <StackPanel HorizontalAlignment="Left" Margin="4,0,0,0">
-                    <ComboBox Margin="4,2,0,0" Width="200" Height="25" VerticalContentAlignment="Center" x:Name="StationCb" IsEditable="False" Padding="4,3,0,0" DisplayMemberPath="name"/>               
+            <StackPanel VerticalAlignment="Center" >
+                <StackPanel VerticalAlignment="Center">
+                    <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10">
+                        <TextBlock Text="原始密码：" Padding="3" FontSize="14"/>
+                        <TextBox x:Name="oldTb" Width="180" Height="25" Padding="3"  FontSize="14"/>
+                    </WrapPanel>
+                    <WrapPanel HorizontalAlignment="Center"  Margin="0,5,0,10">
+                        <TextBlock Text="新  密 码：" Padding="3" FontSize="14" />
+                        <TextBox x:Name="nowTb" Width="180" Height="25" Padding="3"  FontSize="14" InputScope="Number"/>
+                    </WrapPanel>
                 </StackPanel>
             </StackPanel>
         </Border>
